[package]

name = "mime"
version = "0.4.0" # remember to update html_root_url
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
description = "Strongly Typed Mimes"
documentation = "https://docs.rs/mime"
repository = "https://github.com/hyperium/mime"
keywords = ["mime", "media-extensions", "media-types"]

[dependencies]
media-type-impl-utils = { git = "https://github.com/1aim/media-type-impl-utils" }
quoted-string = "0.6"
lut = { git = "https://github.com/1aim/lut", features = ["media-type-chars"] }
percent-encoding = "1.0.0"

[[test]]
name = "features"
required-features = [ "expose-param-utils" ]
path = "tests/features.rs"


[features]
inner-bench = []
expose-param-utils = []
