[package]

name = "media-type"
version = "0.4.0"
authors = ["Philipp Korber <p.korber@1aim.com>",]
license = "MIT OR Apache-2.0"
description = "impl for Media Types"
documentation = "https://docs.rs/media-type"
repository = "https://github.com/1aim/mime"
keywords = ["mime", "media-extensions", "media-types"]

[dependencies]
media-type-impl-utils = { git = "https://github.com/1aim/media-type-impl-utils" }
quoted-string = "0.6"
lut = { git = "https://github.com/1aim/lut", features = ["media-type-chars"] }
percent-encoding = "1.0.0"

[[test]]
name = "features"
required-features = [ "expose-param-utils" ]
path = "tests/features.rs"


[features]
inner-bench = []
expose-param-utils = []
